# Coveron_Instrumenter

./: .env  .gitattributes  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CPPLINT.cfg  MANIFEST.in  README.md  README.rst  _version.py  codecov.yml  cvrinst.spec  evaluation_code.c  output.txt  pre_processor_dump.txt  requirements.txt  setup.cfg  setup.py  test_code.c  test_code.instr.c
codeconut_instrumenter/: ArgumentHandler.py  CIDManager.py  ClangBridge.py  ConditionParser.py  Configuration.py  DataTypes.py  Instrumenter.py  Parser.py  ParserStateMachine.py  Sanitizer.py  StateMachine.py  __init__.py  __main__.py
codeconut_instrumenter/clang/: cindex.py
codeconut_instrumenter/codeconut_runtime_helper/src/: codeconut_helper.c
codeconut_instrumenter/codeconut_runtime_helper/tests/basic_init/: test_basic_init.c
codeconut_instrumenter/codeconut_runtime_helper/tests/condition_decision_evaluation/: test_condition_decision_evaluation.c
codeconut_instrumenter/tests/unit_tests/CIDManager/: test_CIDManager_Generic.py
codeconut_instrumenter/tests/unit_tests/DataTypes/: test_DataTypes_CIDData.py
codeconut_runtime_helper/: project.yml
codeconut_runtime_helper/src/: codeconut_helper.c  codeconut_helper.h
codeconut_runtime_helper/tests/basic_init/: test_basic_init.c
codeconut_runtime_helper/tests/checkpoint_markers/: test_checkpoint_markers.c
codeconut_runtime_helper/tests/condition_decision_evaluation/: test_condition_decision_evaluation.c
codeconut_runtime_helper/tests/condition_markers/: test_condition_markers.c
codeconut_runtime_helper/tests/decision_markers/: test_decision_markers.c
codeconut_runtime_helper/tests/evaluation_markers/: test_evaluation_markers.c
codeconut_runtime_helper/tests/support/: fake_stdio.h
coveron_instrumenter/: ArgumentHandler.py  CIDManager.py  Configuration.py  DataTypes.py  Instrumenter.py  Parser.py  __init__.py  __main__.py
coveron_instrumenter/coveron_runtime_helper/: project.yml
coveron_instrumenter/coveron_runtime_helper/src/: coveron_helper.c  coveron_helper.h
coveron_instrumenter/coveron_runtime_helper/tests/basic_init/: test_basic_init.c
coveron_instrumenter/coveron_runtime_helper/tests/checkpoint_markers/: test_checkpoint_markers.c
coveron_instrumenter/coveron_runtime_helper/tests/condition_decision_evaluation/: test_condition_decision_evaluation.c
coveron_instrumenter/coveron_runtime_helper/tests/evaluation_markers/: test_evaluation_markers.c
coveron_instrumenter/coveron_runtime_helper/tests/support/: fake_stdio.h
coveron_instrumenter/tests/unit_tests/: test_ArgumentHandler.py  test_main.py
coveron_instrumenter/tests/unit_tests/CIDManager/: CID_Schema.json  test_CIDManager_Generic.py
coveron_instrumenter/tests/unit_tests/Configuration/: test_Configuration_Generic.py
coveron_instrumenter/tests/unit_tests/Instrumenter/: test_Instrumenter_Generic.py
coveron_instrumenter/tests/unit_tests/Parser/: test_Parser_CompoundStatements.py  test_Parser_Functions.py  test_Parser_Generic.py  test_Parser_Goto.py  test_Parser_IfBranches.py  test_Parser_Loops.py  test_Parser_SwitchBranches.py  test_Parser_TernaryExpressions.py
docs/: Gemfile  _config.yml  contributing.md  index.html
docs/_data/: docs.yml
docs/_docs/: analyzer.md  architecture.md  cid_format.md  contributing.md  cri_format.md  index.md  instrumenter.md  runtime_helper.md
docs/_includes/: topnav.html
docs/_sass/: _jekyll-doc-theme.scss
docs/_sass/bootstrap/: _list-group.scss
docs/_sass/bootswatch/codeconut/: _variables.scss
docs/documentation/: analyzer.md  architecture.md  cid_format.md  cri_format.md  instrumenter.md  runtime_helper.md
other/uml/: .project  Codeconut.notation  Codeconut.uml
src/: _version.py
src/instrumenter/: ArgumentHandler.py  CIDManager.py  ConditionParser.py  Configuration.py  DataTypes.py  DecisionParser.py  Instrumenter.py  Parser.py  Sanitizer.py  StatementParser.py  __init__.py  __main__.py
src/runtime_helper/: codeconut_helper.c  codeconut_helper.h  test_file.c
tests/runtime_helper/: project.yml
(+16 files in other folders)
