[metadata]
description = Code coverage for C and C++ code with Coveron Instrumenter
long_description = file: README.rst, AUTHORS.rst
license_file = LICENSE

url = https://coveron-project.github.io/
project_urls =
    Github        = https://github.com/coveron-project/coveron_instrumenter
    Issue Tracker = https://github.com/coveron-project/coveron_instrumenter/issues

maintainer = Glenn Töws
maintainer_email = glenntoews@outlook.com

classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities

keywords = coveron, coverage, llvm, gcc, mcdc, decision, statement, asil, sil

[bdist_wheel]
universal=0

[versioneer]
VCS = git
style = pep440
versionfile_source = _version.py
tag_prefix = coveron-instrumenter-